--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -11,7 +11,7 @@ button {
   margin: auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: white;
-  background-color: #061239;
+  background-color: #0d0426;
 }
 h1 {
   color: white;
