--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -95,8 +95,30 @@ h2 {
   margin-right: auto;
   width: 50%;
 }
+.nav-bar1 .icon {
+  display: none;
+}
+
 /*changes the look of the website on different devices*/
 @media screen and (max-width:600px){
   body{background-color: blue;}
   #gif1{display:none;}
+}
+.topnav a:not(:first-child)(display:none;)
+.topnav a.icon(float: right; display block;)
+.topnav.topnav.responsive {position: relative;}
+.topnav.responsive a.icon {
+  width:50px;
+	height:40px;
+	margin:0px;
+	padding:10px;
+	position: absolute;
+    right: 0;
+      }
+.topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .icon img{position:relative;display:block;width:60px;height:30px;margin:0px;padding:0px 10px;float:right;}
 }
