--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -89,7 +89,7 @@ h2 {
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.center {
+.center,.center1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
