--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -7,6 +7,10 @@ body {
   padding:0;
   margin:0;
 }
+title {
+	color: white;
+  	text-align: center;
+}
 button {
   margin: auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -21,6 +25,7 @@ h1 {
 p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 50px;
+color: white
 }
 
 
